# simulasi-perhitungan-ratio-korupsi

./: README.md  main.py  pyproject.toml
src/: cases.py  prints.py  simulated_data.py
